--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet"  href="assets/css/font-awesome.min.css" type="text/css" />
   <link rel="stylesheet"  href="assets/css/elegant-icons.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
